--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1 class="header">Tic Tac Toe</h1>
+    <form action="">
+        <label for="player1">Player 1 Name </label>
+        <input required maxlength="10" type="text" name="player1" id="player1">
+        <label for="player2">Player 2 Name </label>
+        <input required maxlength="10"type="text" name="player2" id="player2"> <br>
+        <button class="start" type="submit">Start</button>
+    </form>
+     <h2 class="turn"></h2>
+     <h1 class="score">Score: </h1>
+    <div id="board">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+
+    </div>
+    <button class="restart">Restart Game</button>
     <script src="code.js"></script>
 </body>
 </html>
